@@ -1,5 +1,9 @@
 2012-12-23  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
+	* run-tests.sh: Script to run all the regression tests.
+
+2012-12-23  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
 	* dejagnu: New directory for DejaGnu specific testing
 	* dejagnu/baseboards: New directory for ARC specific DejaGnu board
 	descriptions.
